--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
 
+    <div ng-controller="FirstController">
+        <input type="text" ng-model="data.message" >
+        <h1>{{data.message}}</h1>
+    </div>
 
-
-    <ui-view></ui-view>
-
-
+    <div ng-controller="SecondController">
+        <input type="text" ng-model="data.message" >
+        <h1>{{reversedMesssage(data.message)}}</h1>
+    </div>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
