--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -17,7 +17,7 @@
 
     <div ng-controller="SecondController">
         <input type="text" ng-model="data.message" >
-        <h1>{{reversedMesssage(data.message)}}</h1>
+        <h1>{{data.message | reverse}}</h1>
     </div>
 
     <script src="bower_components/angular/angular.js"></script>
