--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
 
-    <div ng-controller="FirstController">
-        <input type="text" ng-model="data.message" >
-        <h1>{{data.message}}</h1>
+    <div ng-controller="AvengersCtrl">
+        <!-- input type="text" ng-model="searchText" -->
+        <input type="text" ng-model="search.name">
+        <table>
+            <tr ng-repeat="actor in avengers.cast | filter:search">
+                <td>{{actor.name}}</td>
+                <td>{{actor.character}}</td>
+            </tr>
+        </table>
     </div>
 
-    <div ng-controller="SecondController">
-        <input type="text" ng-model="data.message" >
-        <h1>{{data.message | reverse}}</h1>
-    </div>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
