--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html ng-app="superhero">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +9,8 @@
 
 </head>
 <body>
-
-    <div ng-controller="AvengersCtrl">
-        <!-- input type="text" ng-model="searchText" -->
-        <input type="text" ng-model="search.name">
-        <table>
-            <tr ng-repeat="actor in avengers.cast | filter:search">
-                <td>{{actor.name}} </td>
-                <td>{{actor.character}}</td>
-            </tr>
-        </table>
-    </div>
-
+<h1>Super directive example</h1>
+    <superman></superman>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
