Added EAC directives

--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <h1>Super directive example</h1>
-    <superman></superman>
+    <div superman flash>testme1</div>
 
+    <div class="supermanWithClass">testme2</div>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
