--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="superhero">
+<html ng-app="myApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +9,9 @@
 
 </head>
 <body>
-<h1>Super directive example</h1>
-    <div superman flash>testme1</div>
 
-    <div class="supermanWithClass">testme2</div>
+    <div enter leave>I'm a content</div>
+
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
