Added controller + directive

--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,12 +10,18 @@
 </head>
 <body>
 
-    <div ng-controller="AppCtrl">
-        <!-- 1st and 2nd approach -->
-        <!-- div enter="loadMoreTweets()">Roll over to load more tweets</div -->
-
-        <div enter="deleteMoreTweets()">Roll over to load more tweets</div>
+    <div ng-controller="ChoreCtr">
+        <kid done="logChore(chore)"></kid>
     </div>
+
+
+
+
+
+
+
+
+
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
