--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,18 +10,10 @@
 </head>
 <body>
 
-    <div ng-controller="ChoreCtr">
-        <kid done="logChore(chore)"></kid>
+    <div ng-controller="AppCtrol">
+        <input type="text" ng-model="ctrlFlavor">
+        <div drink flavor="{{ctrlFlavor}}"></div>
     </div>
-
-
-
-
-
-
-
-
-
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
