--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,8 +11,10 @@
 <body>
 
     <div ng-controller="AppCtrol">
+        Ctrl
         <input type="text" ng-model="ctrlFlavor">
-        <div drink flavor="{{ctrlFlavor}}"></div>
+        Dir
+        <div drink flavor="ctrlFlavor"></div>
     </div>
 
     <script src="bower_components/angular/angular.js"></script>
