--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,11 +10,8 @@
 </head>
 <body>
 
-    <div ng-controller="AppCtrol">
-        Ctrl
-        <input type="text" ng-model="ctrlFlavor">
-        Dir
-        <div drink flavor="ctrlFlavor"></div>
+    <div ng-controller="AppCtrl">
+        <div phone dial="callHome(message)"></div>
     </div>
 
     <script src="bower_components/angular/angular.js"></script>
