--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -6,12 +6,17 @@
     <title>My AngularJS App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="foundation.min.css">
 
 </head>
 <body>
 
     <div ng-controller="AppCtrl">
-        <div phone dial="callHome(message)"></div>
+
+        <panel>
+            <div class="button">Click me!</div>
+        </panel>
+
     </div>
 
     <script src="bower_components/angular/angular.js"></script>
