--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -13,9 +13,7 @@
 
     <div ng-controller="AppCtrl">
 
-        <panel>
-            <div class="button">Click me!</div>
-        </panel>
+      <div class="button" ng-click="AppCtrl.sayHi()">Click me!</div>
 
     </div>
 
