--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 
-    <div ng-controller="AppCtrl">
-
-      <div class="button" ng-click="AppCtrl.sayHi()">Click me!</div>
-
-    </div>
+    <input type="text" ng-model="model.title" />
+    <input type="text" ng-model="model.content" />
+    <zippy title="{{model.title}}">
+        The content is: {{model.content}}
+    </zippy>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
