Added compile example!

--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,11 +11,8 @@
 </head>
 <body>
 
-    <input type="text" ng-model="model.title" />
-    <input type="text" ng-model="model.content" />
-    <zippy title="{{model.title}}">
-        The content is: {{model.content}}
-    </zippy>
+
+    <dumb-password></dumb-password>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
