--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 
-
-    <dumb-password></dumb-password>
+    <div ng-controller="MyCtrl">
+        <my-directive></my-directive>
+    </div>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
