--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+<div ng-controller="MyCtrl2">
+</div>
 
     <div ng-controller="MyCtrl">
         <my-directive></my-directive>
