--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,12 +10,13 @@
 
 </head>
 <body>
-    <script type="text/ng-template" id="zippy.html">
+<!-- 1st and 2nd -->
+    <!--script type="text/ng-template" id="zippy.html">
         <div>
             <h3 ng-click="toggleContent()">{{title}}</h3>
             <div ng-show="isContentVisible" ng-transclude=""></div>
         </div>
-    </script>
+    </script -->
     <input type="text" ng-model="model.title">
     <input type="text" ng-model="model.content">
 
