--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -10,21 +10,11 @@
 
 </head>
 <body>
-<!-- 1st and 2nd -->
-    <!--script type="text/ng-template" id="zippy.html">
-        <div>
-            <h3 ng-click="toggleContent()">{{title}}</h3>
-            <div ng-show="isContentVisible" ng-transclude=""></div>
-        </div>
-    </script -->
-    <input type="text" ng-model="model.title">
-    <input type="text" ng-model="model.content">
 
-    <zippy title="{{model.title}}">
-        The content is: {{model.content}}
-    </zippy>
+    <ng-view></ng-view>
 
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
 
