--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <ng-view></ng-view>
+    <div ng-controller="AppCtrl">
+         <ng-view></ng-view>
+    </div>
+
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
