--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div ng-controller="AppCtrl">
-        <error></error>
-         <ng-view></ng-view>
+        {{fruit}}
+        {{title}}
     </div>
 
 
