--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -11,9 +11,15 @@
 </head>
 <body>
 
-    <div  class="button" ng-click="$log.debug($event)"
-            ng-repeat="item in 'abcdefghi'.split('')">
-        {{$index}}. {{item}}
+
+    <div ng-controller="RoomCtrl as room">
+        <div class="button" ng-click="room.openDoor()">
+            {{room.buttonTitle}}
+        </div>
+        <div ng-controller="OtherCtrl as other">
+            {{room.foo}}
+            {{other.foo}}
+        </div>
     </div>
 
 
