--- a/eggHeadExamples/app/index.html
+++ b/eggHeadExamples/app/index.html
@@ -12,15 +12,11 @@
 <body>
 
 
-    <div ng-controller="RoomCtrl as room">
-        <div class="button" ng-click="room.openDoor()">
-            {{room.buttonTitle}}
-        </div>
-        <div ng-controller="OtherCtrl as other">
-            {{room.foo}}
-            {{other.foo}}
-        </div>
-    </div>
+    <country>
+        <state>
+            <city></city>
+        </state>
+    </country>
 
 
     <script src="bower_components/angular/angular.js"></script>
